--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: dark or light;
   }
   body {
     color: white;
