--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,11 @@ a {
 * {
   box-sizing: border-box;
 }
-
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark or light;
