--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Jost;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+
 }
 
 * {
